Information 수정 1) Title 2) Description 3) background/profile images

--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
 # Setup
-title: Not Pure Poole
-description: A simple, beautiful, and powerful Jekyll theme for blogs
+title: Wlsellfe-joon Tech Blog
+description: Automotive Security & ADNN, C/C++/C#/Python
 url: https://vszhub.github.io
-avatar: /avatar.jpeg
+avatar: /bong.png
 paginate: 5
 permalink: pretty
-cover_image: /bg.jpeg
+cover_image: /background.jpg
 
 # Gems
 plugins:
