Summary 수정 1) Name 2) Username

--- a/_config.yml
+++ b/_config.yml
@@ -29,11 +29,11 @@ exclude:
 
 # Optimize Jekyl SEO Tag
 twitter:
-  username: vszhub
+  username: Wlsellfe Joon Tech Blog
   card: summary
 logo: logo.png
 social:
-  name: Songzi Vong
+  name: YongJun Kim
   links:
     - https://twitter.com/vszhub
     - https://github.com/vszhub
