--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ gems:
   - jekyll-paginate
 
 # Site settings
-title: "Wlsellfe Joon - Technical Blog"
+title: "**Wlsellfe Joon**<br>- Technical Blog -"
 description: > # this means to ignore newlines until "email:"
    Automotive Security, Artificial_DNN and C/C++/C#/Python
 
@@ -20,7 +20,7 @@ name: 'YongJun Kim'
 author: 'YongJun Kim'
 author_image: "/assets/images/author.jpg"
 
-paginate:	5
+paginate:	10
 
 url: "http://myblog.***.***" # the base hostname & protocol for your site
 baseurl: ""
