--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,7 @@ gems:
   - jekyll-paginate
 
 # Site settings
-title: "**Wlsellfe Joon**<br>- Technical Blog -"
+title: "Wlsellfe Joon Tech Blog"
 description: > # this means to ignore newlines until "email:"
    Automotive Security, Artificial_DNN and C/C++/C#/Python
 
