--- a/_config.yml
+++ b/_config.yml
@@ -1,43 +1,80 @@
-# Welcome to Jekyll!
-#
-# This config file is meant for settings that affect your whole blog, values
-# which you are expected to set up once and rarely need to edit after that.
-# For technical reasons, this file is *NOT* reloaded automatically when you use
-# 'jekyll serve'. If you change this file, please restart the server process.
 
-# Site settings
-title: Your awesome title
-email: your-email@domain.com
-description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog
-lang: "en"
-url: "http://localhost:4000" # the base hostname & protocol for your site
-twitter_username: jekyllrb
-github_username:  jekyll
-disqus_username:
+##########################################
+#     Change these variables !important
+##########################################
 
-# Build settings
-markdown: kramdown
-permalink: /:categories/:title/
+# Set this for Copyright in the footer
+owner: Name Surname
 
-# Posts settings
-future: true
-safe: false
-lsi: false
-excerpt_separator: "\n\n"
+# Optional quote in the footer
+# To disable set enable to false
+quote:
+  enable: true
+  quote: Some fancy quote
+  author: John Doe
 
-# Theme settings
-compress_html:
-  comments: ["<!-- ", " -->"]
-  clippings: all
-  endings: all
+# Set this to your main site title. If page doesn't have its own title,
+# then this title will be used.
+title: Aliquam Theme
 
+
+# Following needed for disqus integration
+# Set your 'disqus' account name
+disqus:
+
+# Uncomment if deployed locally
+#url: https://localhost:4000
+
+# Set your host if deployed not locally
+# For example "https://yourGitHub.github.io"
+url:
+
+# Change this to your base URL starting with forward slash if site is in gh-pages branch
+# For example /branchName
+# NOTE! only change if site is NOT in master's branch
+baseurl:
+
+# Change this to your google analytics ID
+google_analytics:
+
+# Contact form pupublic key
+contact_PK:
+
+##########################################
+#          Optional variables
+##########################################
+
+# Set maximum posts per page
+paginate: 5
+
+# Set permalink
+permalink: /:categories/:title
+
+# MathJax support
+math: false
+
+collections:
+- definitions
+
+##########################################
+#          Do not change these variables
+##########################################
+
+include:
+  - _pages
 
 sass:
-  style: compressed
+  sass_dir: _sass
+sass:
+    style: compressed
 
+gems:
+  - jekyll-paginate
+  - jekyll-sitemap # add /sitemap.xml file
 
-images: '/assets/images'
+paginate_path: /_pages/page:num
+
+highlighter: rouge
+markdown: kramdown
+kramdown:
+  input: GFM
