--- a/_config.yml
+++ b/_config.yml
@@ -92,8 +92,8 @@ social:
 
   - name: GitHub
     icon: github
-    username: bencentra
-    url: https://github.com/bencentra
+    username: Yongjun Kim
+    url: https://github.com/Wlsellfe-joon
     desc: Fork me on GitHub
     share: false
 
@@ -118,12 +118,12 @@ social:
   #   desc: Subscribe on YouTube
   #   share: false
 
-  - name: Instagram
-    icon: instagram
-    username: ""
-    url: ""
-    desc: Follow me on Instagram
-    share: false
+  # - name: Instagram
+  #   icon: instagram
+  #   username: ""
+  #   url: ""
+  #   desc: Follow me on Instagram
+  #   share: false
 
   # - name: Pinterest
   #   icon: pinterest
@@ -192,12 +192,12 @@ social:
 # These are for automatically generating sharing metadata for FB and Twitter
 # OS Protocol is for sharing the source of your site, if you're interested. For more, see osprotocol.com
 protocols:
-    fb_image: "/assets/logo.png"
+    fb_image: "/assets/logo.svg"
     fb_image_width: 612
     fb_image_height: 605
     fb_image_type: "image/png"
 
-    twitter_image: "/assets/logo.png"
+    twitter_image: "/assets/logo.svg"
 
     os_repo: "https://github.com/bencentra/centrarium.com"
     os_rcs_type: "git"
