--- a/_config.yml
+++ b/_config.yml
@@ -197,7 +197,7 @@ protocols:
     fb_image_height: 612
     fb_image_type: "image/png"
 
-    # twitter_image: "/assets/logo.svg"
+    twitter_image: "/assets/logo.png"
 
     # os_repo: "https://github.com/bencentra/centrarium.com"
     # os_rcs_type: "git"
