--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,7 @@ description: >
 # root of your server.
 baseurl: "" # the subpath of your site, e.g. /blog/
 url: "" # the base hostname & protocol for your site
-cover: "/assets/header_image.jpg"
+cover: "/assets/korea_river_byKYJ_gray_UP.jpg"
 logo: "/assets/WJ_logo.svg"
 
 # Build settings
