config-future 추가

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Encoding setting
 encoding: UTF-8
-
+future: true
 # External plugins
 # See http://ixti.net/software/2013/01/28/using-jekyll-plugins-on-github-pages.html for making `jekyll archives` work.
 plugins:
