--- a/_config.yml
+++ b/_config.yml
@@ -33,13 +33,15 @@ highlightjs_theme: "monokai-sublime"
 
 # Pagination Settings
 # https://github.com/sverrirs/jekyll-paginate-v2/blob/master/README-GENERATOR.md#site-configuration
-pagination:
-  enabled: true
-  per_page: 5
-  permalink: "/page/:num/"
-  sort_field: "date"
-  sort_reverse: true
-  title: ":title - page :num"
+# pagination:
+#   enabled: true
+#   per_page: 5
+#   permalink: "/page/:num/"
+#   sort_field: "date"
+#   sort_reverse: true
+#   title: ":title - page :num"
+paginate: 5
+paginate_path: "/page:num/"
 
 # Archive settings (see https://github.com/jekyll/jekyll-archives/)
 jekyll-archives:
