paper review posting

--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ future: true
 plugins:
   - jekyll-archives # Sorry, not GitHub pages friendly!
   - jekyll-sitemap
-  - jekyll-paginate-v2
+  - jekyll-paginate
 
 exclude:
   - "/vendor/"
